--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.1",
     "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
-    "server": "json-server --watch db.json --port 4000",
+    "server": "json-server --watch db.json --port 4001",
     "test": "jest"
   },
   "eslintConfig": {
